# playground

cmake/helloworld/: CMakeLists.txt
cpp/: .gitignore  README.md
cpp/basis_space/: basis_space.sln
cpp/bidirectional_conversion_table/: bidirectional_conversion_table.sln
cpp/bidirectional_map/: bidirectional_map.sln  bidirectional_map.vcxproj  bidirectional_map.vcxproj.filters  bidirectioncal_map.hpp  main.cpp
cpp/boost_exploration/: boost_exploration.sln
cpp/callback-params/: callback-params.sln
cpp/callback_destructor/: callback_destructor.sln
cpp/callback_register/: callback_register.sln
cpp/callback_register_on_stack/: callback_register_on_stack.sln
cpp/callback_store/: callback_store.sln
cpp/cef_window/: cef_window.sln
cpp/concurrency/: concurrency.sln
cpp/consteval_bidirectional_map/: consteval_bidirectional_map.vcxproj  main.cpp
cpp/constexpr_ptr/: constexpr_ptr.sln
cpp/container_filter/: container_filter.sln
cpp/containers/: containers.sln  public.props
cpp/coroutines/: coroutines.sln
cpp/cpp_dll/: cpp_dll.sln
cpp/cpp_exploration/: cpp_exploration.sln
cpp/di_container/: di_container.sln
cpp/dll/: dll.sln
cpp/dxf_format/: dxf_format.sln
cpp/ed/: ed.sln  ed.vcxproj  ed.vcxproj.filters  event_distributor_impl.h  event_distributor_impl.inl  event_distributor_intf.h  registration_holder.h  registration_holder.inl  registrator_intf.h  test.cpp
cpp/error/: error.sln
cpp/error_handling/: error_handling.sln
cpp/file_modifier/: file_modifier.sln
cpp/fixedpoint/: fixedpoint.sln
cpp/frames/: README.md  frames.sln
cpp/generic/: generic.sln
cpp/graph/: graph.sln
cpp/helloworld/: main.cpp
cpp/hexstring_to_bytearray/: hexstring_to_bytearray.sln
cpp/hw_rendering/: hw_rendering.sln
cpp/inheritance/: inheritance.sln  inheritance.vcxproj  main.cpp
cpp/interface_extension/: interface_extension.sln
cpp/interface_polymorphism/: interface_polymorphism.sln
cpp/intersections/: intersections.sln
cpp/intitializer_list/: intitializer_list.sln
cpp/invocation/: invocation.sln
cpp/invoke_bridge/: invoke_bridge.sln
cpp/json_path/: json_path.sln
cpp/jsoncpp_visualizer/: JsonCpp.natvis
cpp/kernel_routines/: ReadMe.txt  kernel-routines.cpp  kernel-routines.sln  kernel-routines.vcxproj  kernel-routines.vcxproj.filters  stdafx.cpp
cpp/lambda/: lambda.sln
cpp/lemon/: lemon_lib_test.sln
cpp/link/: link.sln
cpp/long_long_types/: long_long_types.sln
cpp/magic/: magic.cpp  magic.sln  magic.vcxproj  magic.vcxproj.filters
cpp/manual_const/: manual_const.sln
cpp/member_function_pointer/: member_function_pointer.sln
cpp/member_inheritance/: member_inheritance.sln
cpp/memory_guard/: memory_guard.sln
d/: .gitignore
ps/: replace.ps1
python/: .gitignore
qt/mvc/: CMakeLists.txt
qt/mvc/source/: Main.cpp  MainWidget.h  Model.h
qt/observable_line_edit/: CMakeLists.txt
qt/observable_line_edit/source/: LineEdit.h  Main.cpp
qt/observable_widgets/: CMakeLists.txt  __CMakeLists.txt  observable_widgets.pro
qt/observable_widgets/source/: ComboBox.h  InputSelect.h  LineEdit.h  ListWidget.h  Main.cpp  MainWidget.h  SpinBox.h  StringListModel.h  UserAccountLogic.h  input_select_model.hpp  input_select_state.hpp
qt/observable_widgets/source/Alternative/: Label.h
qt/observable_widgets/source/NonIntrusive/: ComboBox.h  ComboBoxLogic.cpp  ComboBoxLogic.h
qt/observable_widgets/source/Silent/: ComboBox.cpp  ComboBox.h
qt/qcombobox/: CMakeLists.txt
qt/qcombobox/source/: Main.cpp
qt/qslider/: CMakeLists.txt  Main.cpp  Slider.cpp  Slider.h
(+1334 files in other folders)
